--- a/НАЛАШТУВАННЯ_БОТА.md
+++ b/НАЛАШТУВАННЯ_БОТА.md
@@ -1,66 +1,90 @@
-# Налаштування Telegram бота
+# Бот для парсингу Telegram каналів
 
-Цей документ пояснює, як виправити проблеми з токеном Telegram бота.
+Цей бот дозволяє моніторити та парсити повідомлення з Telegram каналів.
 
-## Проблема
+## Можливості
 
-Ваш бот не запускається з помилкою:
+- Авторизація Telegram сесій для парсингу приватних каналів
+- Перегляд останніх повідомлень з каналів
+- Категоризація каналів для кращої організації
+- Доступ до отриманих повідомлень через веб-інтерфейс
+
+## Налаштування та запуск
+
+### Швидкий старт
+
+Найпростіший спосіб запустити бота - використати скрипт `start_bot.py`:
+
+```bash
+python start_bot.py
 ```
-Bot token verification failed: Telegram server says - Unauthorized
+
+Цей скрипт:
+1. Зупинить будь-які існуючі Python процеси
+2. Виправить конфігурацію бази даних
+3. Виправить файли міграцій, якщо потрібно
+4. Застосує міграції бази даних
+5. Запустить бота у фоновому режимі
+
+Після цього ви можете отримати доступ до бота за посиланням https://t.me/chan_parsing_mon_bot
+
+### Альтернативні способи запуску
+
+Якщо у вас виникають проблеми з швидким стартом, спробуйте ці альтернативи:
+
+1. Прямий запуск скрипта бота:
+```bash
+python tg_bot/bot.py
 ```
 
-Це означає, що токен бота недійсний, прострочений або відкликаний.
+2. Запуск з виправленнями:
+```bash
+python fix_bot_integration.py && python tg_bot/bot.py
+```
 
-## Вирішення
+3. Повне виправлення та запуск:
+```bash
+python fix_all_issues.py && python tg_bot/bot.py
+```
 
-Вам потрібно встановити дійсний токен Telegram бота. Виконайте наступні кроки:
+## Вирішення проблем
 
-### Варіант 1: Використання скрипта setup_bot_token.py (Рекомендовано)
+Якщо у вас виникають проблеми з ботом, спробуйте ці кроки:
 
-1. Запустіть скрипт:
-   ```
-   python setup_bot_token.py
-   ```
+1. Перевірте статус бота:
+```bash
+python check_bot_status.py
+```
 
-2. Коли буде запропоновано, введіть ваш дійсний токен бота.
+2. Скиньте та виправте всі проблеми:
+```bash
+python fix_all_issues.py
+```
 
-3. Скрипт перевірить токен, збереже його у всіх необхідних місцях і підготує бота до запуску.
+3. Виправте проблеми з підключенням до бази даних:
+```bash
+python fix_database_connection.py
+```
 
-### Варіант 2: Ручне налаштування
+4. Виправте проблеми з інтеграцією:
+```bash
+python fix_bot_integration.py
+```
 
-Якщо ви віддаєте перевагу ручному налаштуванню:
+## Змінні оточення
 
-1. Отримайте дійсний токен бота від @BotFather в Telegram
+Бот використовує ці змінні оточення:
 
-2. Оновіть токен в одному з наступних місць:
-   - Відредагуйте `tg_bot/config.py` і встановіть `TOKEN_BOT = "ваш_токен_тут"`
-   - Встановіть змінну середовища: `export BOT_TOKEN=ваш_токен_тут`
-   - Оновіть токен у панелі адміністратора Django (модель BotSettings)
+- `BOT_TOKEN`: Токен Telegram бота (за замовчуванням: 8102516142:AAFTsVXXujHHKoX2KZGqZXBHPBznfgh7kg0)
+- `BOT_USERNAME`: Username Telegram бота (за замовчуванням: chan_parsing_mon_bot)
+- `API_ID`: Telegram API ID (за замовчуванням: 19840544)
+- `API_HASH`: Telegram API Hash (за замовчуванням: c839f28bad345082329ec086fca021fa)
 
-3. Перезапустіть програму або розгортання на Railway
+## Конфігурація бази даних
 
-## Отримання нового токену бота
+Бот підтримує два режими бази даних:
 
-Якщо вам потрібно створити нового бота або перегенерувати токен:
+1. Локальна SQLite (за замовчуванням для локальної розробки)
+2. PostgreSQL (за замовчуванням для розгортання на Railway)
 
-1. Відкрийте Telegram і напишіть [@BotFather](https://t.me/BotFather)
-2. Використовуйте `/newbot`, щоб створити нового бота, або `/revoke`, щоб перегенерувати токен
-3. BotFather надасть вам токен на кшталт `123456789:ABCDefGhIJKlmNoPQRsTUVwxyZ`
-4. Використовуйте цей токен у кроках вище
-
-## Перевірка підключення бота
-
-Після встановлення токену ви можете перевірити, чи працює ваш бот:
-
-1. Запустіть `python set_bot_token.py`, який перевірить токен
-2. Надішліть команду `/start` вашому боту в Telegram
-3. Перевірте логи на наявність повідомлень про успішне підключення
-
-## Потрібна допомога?
-
-Якщо у вас продовжуються проблеми:
-1. Перевірте логи програми для отримання детальної інформації про помилки
-2. Переконайтеся, що ваш Telegram бот не вимкнений
-3. Перевірте, чи дозволяє ваше інтернет-з'єднання доступ до API Telegram
-
-Для отримання додаткової допомоги з Telegram ботами відвідайте: https://core.telegram.org/bots 
+Локальна конфігурація відбувається автоматично, коли ви запускаєте скрипти бота. 
